# pussyhub

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  generate_keys.sh
api-service/: Cargo.toml  Dockerfile  sqlx-data.json
api-service/src/: auth.rs  main.rs
api-service/src/endpoint/: category.rs  mod.rs  rating.rs  stream.rs  user.rs  video.rs
api-service/src/error/: auth.rs  category.rs  mod.rs  stream.rs  user.rs  video.rs
api-service/src/model/: category.rs  mod.rs  rating.rs  stream.rs  user.rs  video.rs
api-service/src/repository/: category_repository.rs  mod.rs  stream_repository.rs  user_repository.rs  video_repository.rs
auth-service/: .env  Cargo.toml  Dockerfile  sqlx-data.json
auth-service/resources/: private.pem  public.pem
auth-service/resources/languages/: default.ftl
auth-service/src/: application_data.rs  errors.rs  main.rs  slim_users.rs  token_issuer.rs  tokens.rs  user_repo.rs
auth-service/src/auth/: handlers.rs
auth-service/src/database/: error.rs  mod.rs  user_repo.rs
auth-service/src/registration/: handlers.rs  invitation.rs  mod.rs
auth-service/src/stream_auth/: handlers.rs
client/: .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html
client/app/: Cargo.toml
client/app/src/: app.rs
client/app/static/: index.html
client/src/: main.rs  routes.rs
client/src/components/: email_confirmation.rs  footer.rs  header.rs  home.rs  livestreams.rs  login.rs  login_demo.rs  main_layout.rs  mod.rs  navigation.rs  plain_layout.rs  register.rs  stream.rs  video.rs  video_player.rs  videos.rs
client/src/components/admin/: categories.rs  mod.rs
client/src/components/creator/: edit_video.rs  mod.rs  my_videos.rs  start_stream.rs
client/src/services/: auth.rs  jwt.rs  mod.rs  requests.rs
client/src/static/: ph-theme.css  videoPlayer.js  vjs-theme-ph.css
db/: Dockerfile  Up.sql
docs/: api.md  streaming_instructions.md
docs/swagger/: README.md  docs.html  index.html  swagger.yaml
file-service/: Cargo.toml
file-service/src/: application_data.rs  file_paths.rs  main.rs
file-service/src/handlers/: delete.rs  download.rs  mod.rs  upload.rs
server/: .env  Cargo.toml
server/src/repository/: mod.rs  video_repository.rs
shared-lib/: Cargo.toml
shared-lib/src/: auth.rs  errors.rs  lib.rs  token_validation.rs
shared-lib/src/error/: auth.rs  mod.rs  registration.rs
shared-lib/src/payload/: auth.rs  category.rs  mod.rs  rating.rs  registration.rs  stream.rs  stream_auth.rs  user.rs  video.rs
streaming/: nginx.conf
user-service/: Cargo.toml
user-service/src/: application_data.rs  main.rs  user_repo.rs
