[package]
name = "api-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_lib = { path = "../shared-lib" }

actix-web = "4.0.0-beta.11"
actix-cors = "0.6.0-beta.4"
tokio = { version = "1", features = ["full"]}
dotenv = { version = "0.15.0" }
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres", "chrono" ] }
async-trait = "0.1.51"
anyhow = "1.0.45"
actix-files = "0.6.0-beta.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.70"
chrono = { version = "0.4.19", features = [ "serde" ] }