[package]
name = "auth-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_lib = { path = "../shared-lib" }

actix-rt = "2"
actix-web = { version = "4.0.0-beta.10" }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
env_logger = "0.8"
futures = "0.3.8"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

async-trait = "0.1"
tokio = { version = "1", features = [ "full" ] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
anyhow = { version = "1" }
thiserror = "1.0"
dotenv = "0.15.0"
jsonwebtoken = "7"
lettre = "0.10.0-rc.4"
tracing = "0.1"
tracing-subscriber = "0.2"
