[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_lib = { path = "../shared-lib" }
yew = "0.18.0"
yewtil = "0.4.0"
yew-router = "0.15.0"
ybc = "0.2"
reqwest = { version = "0.11", features = [ "json" ] }
anyhow = "1.0.51"
serde = "1.0.130"
serde_json = "1.0.72"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
parking_lot = "0.10.0"
lazy_static = "1.4.0"
gloo = "0.4"
gloo-dialogs = "0.1.0"
yewdux = "0.6.2"
thiserror = "1.0"
blake3 = "1.3.0"