[package]
name = "shared_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwt-simple = "0.10.8"
serde = "1.0"
anyhow = { version = "1" }
thiserror = { version = "1.0" }
validator = { version = "0.12", features = ["derive"] }